fixed line spacing for paragraphs

--- a/themes/custom/pco_cities_bootstrap/sass/layouts/_challengePagesLayout.scss
+++ b/themes/custom/pco_cities_bootstrap/sass/layouts/_challengePagesLayout.scss
@@ -188,7 +188,7 @@
 
     p {
       font-size: 0.95em;
-      line-height: 1.5em;
+
     }
 
     p.lead {
